--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>To Do App</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./src/normalize.css">
   <link rel="stylesheet" type="text/css" href="./src/styles.css">
   <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
